--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/app.tsx"></script>
+    <!-- vConsole -->
   </body>
 </html>
